# OpenCV

./: CMakeLists.txt  Main.cpp
